--- a/app/src/main/res/navigation/team_navigation.xml
+++ b/app/src/main/res/navigation/team_navigation.xml
@@ -21,7 +21,11 @@
         android:id="@+id/achievementFragment"
         android:name="com.example.teamesport.view.AchievementFragment"
         android:label="fragment_achievement"
-        tools:layout="@layout/fragment_achievement" />
+        tools:layout="@layout/fragment_achievement" >
+        <argument
+            android:name="gameName"
+            app:argType="string" />
+    </fragment>
     <fragment
         android:id="@+id/teamsFragment"
         android:name="com.example.teamesport.view.TeamsFragment"
