progress_gambar_picasso_done

--- a/app/src/main/res/navigation/team_navigation.xml
+++ b/app/src/main/res/navigation/team_navigation.xml
@@ -25,6 +25,9 @@
         <argument
             android:name="gameName"
             app:argType="string" />
+        <argument
+            android:name="gameImage"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/teamsFragment"
