--- a/app/src/main/res/navigation/team_navigation.xml
+++ b/app/src/main/res/navigation/team_navigation.xml
@@ -65,5 +65,34 @@
         android:id="@+id/scheduleFragment"
         android:name="com.example.teamesport.view.ScheduleFragment"
         android:label="fragment_schedule"
-        tools:layout="@layout/fragment_schedule" />
+        tools:layout="@layout/fragment_schedule" >
+        <action
+            android:id="@+id/action_scheduleFragment_to_scheduleDetailFragment"
+            app:destination="@id/scheduleDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/scheduleDetailFragment"
+        android:name="com.example.teamesport.view.ScheduleDetailFragment"
+        android:label="fragment_schedule_detail"
+        tools:layout="@layout/fragment_schedule_detail" >
+        <argument
+            android:name="schedEvent"
+            app:argType="string" />
+        <argument android:name="schedTeam"
+            app:argType="string" />
+        <argument
+            android:name="schedMon"
+            app:argType="string" />
+        <argument
+            android:name="schedDate"
+            app:argType="string" />
+        <argument
+            android:name="schedPhotoUrl"
+            app:argType="string" />
+        <argument android:name="schedDesc"
+            app:argType="string" />
+        <argument
+            android:name="schedLoc"
+            app:argType="string" />
+    </fragment>
 </navigation>
