--- a/app/src/main/res/layout/fragment_whoweare.xml
+++ b/app/src/main/res/layout/fragment_whoweare.xml
@@ -41,5 +41,17 @@
             android:text="TextView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
+
+        <Button
+            android:id="@+id/btnLike"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:layout_marginEnd="25dp"
+            android:clickable="false"
+            android:text="0"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtDescription" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
