--- a/app/src/main/res/layout/fragment_schedule_detail.xml
+++ b/app/src/main/res/layout/fragment_schedule_detail.xml
@@ -65,5 +65,15 @@
             android:text="Illem Pace Bellum"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtViewLocTime" />
+
+        <ImageButton
+            android:id="@+id/btnNotify"
+            android:layout_width="70dp"
+            android:layout_height="63dp"
+            android:layout_marginTop="43dp"
+            android:layout_marginEnd="31dp"
+            android:src="@drawable/baseline_circle_notifications_24"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView4" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
