--- a/app/src/main/res/navigation/team_navigation.xml
+++ b/app/src/main/res/navigation/team_navigation.xml
@@ -96,6 +96,9 @@
         <argument
             android:name="schedLoc"
             app:argType="string" />
+        <action
+            android:id="@+id/actionDialogFragment"
+            app:destination="@id/dialogFragment" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
@@ -106,4 +109,17 @@
             android:id="@+id/actionItemWhatweplay"
             app:destination="@id/itemWhatweplay" />
     </fragment>
+    <dialog
+        android:id="@+id/dialogFragment"
+        android:name="com.example.teamesport.view.DialogFragment"
+        android:label="fragment_dialog"
+        tools:layout="@layout/fragment_dialog" >
+        <argument
+            android:name="schedEvent"
+            app:argType="string" />
+    </dialog>
+    <activity
+        android:id="@+id/registerActivity"
+        android:name="com.example.teamesport.view.RegisterActivity"
+        android:label="RegisterActivity" />
 </navigation>
