team_based_on_id_done

--- a/app/src/main/res/navigation/team_navigation.xml
+++ b/app/src/main/res/navigation/team_navigation.xml
@@ -43,6 +43,9 @@
         <argument
             android:name="gambar"
             app:argType="string" />
+        <argument
+            android:name="gameIds"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/itemWhoweare"
